--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JS Start</title>
+  <title>* JS Start *</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,5 +14,6 @@
   <!--  ^ script  ====================== -->
   <script src="app.js"></script>
 </body>
+git status
 
 </html>
