--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quas placeat quam?</h1>
 
   <!--  ^ script  ====================== -->
   <script src="app.js"></script>
